--- a/service/src/main/resources/application.yml
+++ b/service/src/main/resources/application.yml
@@ -27,4 +27,7 @@ spring:
 
 application:
   request-id-header: request-id
-  max-issue-book: 5
+  token-expiry-minute: 30
+  token-prefix: Bearer
+  jwt-secret: dipAnj@L
+  auth-header-name: Authorization
