--- a/service/src/main/resources/application.yml
+++ b/service/src/main/resources/application.yml
@@ -33,3 +33,4 @@ application:
   jwt-secret: dipAnj@L
   auth-header-name: Authorization
   token-validation-regex: ^Bearer\s[A-Za-z0-9-_=]+\.[A-Za-z0-9-_=]+\.?[A-Za-z0-9-_.+/=]*$
+  seeder-enabled: true
